# elfaquant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Procfile  README.md  add_cooldown.py  add_ema_queries.py  add_fc7f4d14.py  add_instant_queries.py  add_now_queries.py  add_queries.py  add_rsi60.py  check_bal.py  check_close.py  check_close2.py  check_grvt.py  check_grvt_api.py  check_grvt_methods.py  check_login_response.py  check_loop.py  check_mm.py  check_mm2.py  check_open_orders.py  check_position.py  check_process_fire.py  check_rsi.py  check_sl.py  check_supervisor.py  check_v7_auth.py  check_v8.py  close_position.py  contest_bot.py  create_elfa_query.py  debug_ticker.py  debug_v8.py  direct_fix_core.py  emergency_fix_core.py  eql.json  (+148 more)
.claude/: settings.local.json
analysis/: main_analysis.py  phase1_regime.py  phase2_fundamentals.py  phase3_technical.py  phase4_entry.py  phase5_sizing.py  position_manager.py  position_state.json
elfa_grvt_bot/: __init__.py  alerts.py  cli.py  core.py  elfa_client.py  grvt_client.py  preflight.py  registry.py  scorer.py  strategy_engine.py
references/: 01-architecture.md  02-protocols.md  03-state.md  04-algorithms.md  05-failure-modes.md  06-libraries.md  07-test-vectors.md  08-cli.md  09-strategy-authoring.md  10-troubleshooting.md
references/captured-frames/: README.md  notification_cron_once_2026-05-13.txt  notification_price_current_2026-05-13.txt  stream_close_2026-05-14.txt
tests/: test_cli.py  test_core.py  test_elfa_client.py  test_grvt_client.py  test_preflight.py  test_registry.py
