[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elfa-grvt-bot"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "grvt-pysdk>=0.2,<1.0",
    "httpx>=0.27,<1.0",
    "requests>=2.31,<3.0",
    "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "responses>=0.24,<1.0"
]

[project.scripts]
elfa-grvt-bot = "elfa_grvt_bot.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"